syntax = "proto3";
 
option java_multiple_files = true;
option java_package = "eu.more2020.visual.domain.GrpcAutoGenerated.AthenaForecasting";
package csv_service;
 
service Csv_Service {
    rpc HandleData(HandleDataRequest) returns (HandleDataResponse);
}
 
message HandleDataRequest {
    string data_id = 1;
    string start_date = 2;
    string end_date = 3;
    string use_case_id = 4;
}
 
message HandleDataResponse {
     map<string, float> results = 1;
}